--- a/Essays/穿越时间的文本.md
+++ b/Essays/穿越时间的文本.md
@@ -16,47 +16,47 @@ Illustrated by [Maggie Appleton](https://maggieappleton.com/)
 
 The most powerful books reach beyond their pages—beyond those few hours in which they’re read—and indelibly transform how serious readers see the world. Few books achieve such transcendent impact, yet given their physical constraints, it’s remarkable that any do. As a medium, books have no direct means of communicating with readers over time. The physical text is stuck on the page, generally read linearly and continuously in a few sittings.
 
-最有影响力的书籍超越了它们的书页——超越了它们被阅读的那几个小时——不可磨灭地改变了严肃读者看待世界的方式。很少有书能达到这种超越性的影响，但考虑到它们的物理限制，能做到这一点已经很了不起了。作为一种媒介，书籍没有与读者进行长期交流的直接手段。有形的文本停留在书页上，通常在几个时段内被线性地连续阅读。
+最有影响力的书籍能够超越纸张的承载——超越墨字被阅读的那几个小时——并不可磨灭地改变了严肃读者的世界观。能有这样超越性影响的书很少，出于书籍本身的载体限制，能做到这一点已经是伟大的了。但书籍作为一种载体，不能够与读者进行长期的交流，往往你只能够在不同时间中几经辗转地把字行阅读。
 
 To be transformed by a book, readers must do more than absorb information: they must bathe in the book’s ideas, relate those ideas to experiences in their lives over weeks and months, try on the book’s mental models like a new hat. Unfortunately, readers must drive that process for themselves. Authors can’t easily guide this ongoing sense-making: their words are stuck on pages which have already been read. How might one create a medium which does the job of a book, but which escapes a book’s shackled sense of time? How might one create *timeful texts*—texts with affordances extending the authored experience over weeks and months, texts which continue the conversation with the reader as they slowly integrate those ideas into their lives?
 
-要想被一本书改变，读者必须做的不仅仅是吸收信息：他们必须沐浴在书中的观点里，将这些观点与他们几周甚至几个月的生活经历联系起来，像戴上一顶新帽子一样尝试书中的心智模型。不幸的是，读者必须自己来推动这个过程。作者不能轻易引导这种持续的感性认识：他们的文字停留在已经被阅读过的书页上。我们如何创造一种媒介，既能完成书的工作，又能摆脱书的时间感的束缚？如何才能创造出**穿越时间的文本**——有能力将作者的经验延长到几周或几个月的文本，在读者慢慢将这些想法融入他们的生活时，继续与他们对话？
+读者们如果想要通过书籍来重塑世界观，不仅仅需要汲取信息：他们必须沐浴在书中的观点里，并将这些观点与他们几周甚至几个月的生活经历联系起来，像试着戴上一顶新帽子一样去尝试书中的思维。但读者必须自己来推动这个过程，因为作者的文字仅留在纸上，很难引导读者去构建持续的感性认识。我们如何创造一种既能完成书的工作，又能摆脱书的时间束缚的媒介呢？如何才能创造出**穿越时间的文本**——一种当读者逐渐将观点融入到他们的生活中，还能够继续与读者对话的文本？
 
 ![This figure illustrates how parts of a book might related to various activities in life, including conversation, other books, and film.](https://numinous.productions/timeful/images/paperExtracts.png)
 
 Each year, hundreds of thousands of students study *Molecular Biology of the Cell*. The text presents endless facts and figures, but its goal is not simply to transmit reference material. The book aspires to convey a strong sense of how to think like a cell biologist—a way of looking at questions, at phenomena, and at oneself. For example, it contains nuanced discussions of microscopy techniques, but readers can’t meaningfully try on those ways of thinking while they’re reading. Readers must carry this book’s ideas into their daily interactions in the lab, watching for moments which relate to the exercises or which give meaning to the authors’ advice.<img src="https://numinous.productions/timeful/images/leftFloat1.png" alt="img" style="zoom:25%;" /> This model of change is brittle: the right situation must arise while the book is still fresh in readers’ minds; they must notice the relevance of the situation; they must remember the book’s details; they must reflect on their experience and how it relates to the book’s ideas; and so on.
 
-每年都有数十万学生学习《细胞的分子生物学》。该文本展示了无尽的事实和数字，但其目标不是简单地传递参考材料。该书希望传达一种强烈的意识，即如何像细胞生物学家那样思考——看待问题、现象和自己的方式。例如，它包含了对显微镜技术的细致讨论，但读者在阅读时无法有意义地尝试这些思维方式。读者必须把这本书的观点带入他们在实验室的日常互动中，留意那些与练习有关的时刻，或者赋予作者的建议以意义。这种改变模型是很脆弱的：正确的情况必须在读者对这本书还记忆犹新时出现；他们必须注意到这种情况的相关性；他们必须记住这本书的细节；他们必须反思他们的经验以及它与书中观点的关系；如此等等。
+每年都有数十万学生在学习《细胞的分子生物学》。这本书展示了无数的事实和数字，但它的目标不是简单地传达资料。这本书希望传达一种像细胞生物学家那样思考的强烈的意识——如何去看待问题、剖析现象和形成自己的思维方式。例如，书里细致入微地讨论了显微技术，但读者在阅读时并不能有成效地尝试这些思维方式。读者必须把这些方式带入实验室的日常中，在练习中去留意这些观点的展现，或是让书籍作者的提议得到实际的意义。这种模式的变化是很脆弱的：它要求读者对书中的内容还留有记忆；它要求读者必须注意到实践与理论的相关性；它要求读者不能把书里的一些细节忘记；如此等等。
 
 As we consider alternative approaches, we can find inspiration in the world’s most transformative books. Consider texts like the Bible and the Analects of Confucius. People integrate ideas from those books into their lives over time—but not because authors designed them that way. Those books work because they’re surrounded by rich cultural activity. Weekly sermons and communities of practice keep ideas fresh in readers’ minds and facilitate ongoing connections to lived experiences. This is a powerful approach for powerful texts, requiring extensive investment from readers and organizers. We can’t build cathedrals for every book. Sophisticated readers adopt similar methods to study less exalted texts, but most people lack the necessary skills, drive, and cultural contexts. How might we design texts to more widely enable such practices?
 
-当我们考虑其他方法时，我们可以从世界上最具变革性的书籍中找到灵感。考虑一下《圣经》和《论语》等文本。随着时间的推移，人们将这些书中的思想融入他们的生活，但并不是因为作者是如此设计的。这些书之所以有效，是因为它们被丰富的文化活动所包围。每周的布道会和实践社区使读者的思想保持新鲜，并促进与生活经验的持续联系。对于强有力的文本来说，这是一种强有力的方法，需要读者和组织者的大量投入。我们不可能为每本书建立大教堂。成熟的读者采用类似的方法来研究不那么显赫的文本，但大多数人缺乏必要的技能、动力和文化背景。我们如何设计文本才能更广泛地实现这种做法？
+如果我们换一个方式去想，也许可以从世上那些最有影响力和变革性的书籍中找到灵感，比如说《圣经》和《论语》。这些书的作者在书写的时候，可能从未想过随着时间的推移，人们会将书中的思想融入他们的生活。这些书有效的原因是它们被丰富的文化活动所包围。每周的布道会和实践社区使读者的思想保持新鲜，并促进与生活经验的持续联系。这是一种极好的方法让书籍内容贯彻人心，但这需要读者和组织者的大量投入。显然我们不可能为每本书都建立大教堂。练达的读者会用类似的方法来研究不那么出名的书，但大多数人并没有这样的技能、动力和文化背景。所以我们如何才能让文本能够像《圣经》一样更广泛地被大众所融会贯通呢？
 
 ![img](https://numinous.productions/timeful/images/leftFloat2.png)
 
 Guided meditation smartphone apps offer a promising design approach. Meditation’s insights unfold slowly. Aspirants are typically advised to practice daily. Over weeks and months, they may begin to experience the world differently. Some concepts in meditation make no sense if you still can’t perceive your breath clearly, so they’re best introduced later. A book on meditation isn’t well-suited to this kind of slow unfurling: much of it may not make sense initially; readers will need to re-read it again and again as their practice progresses. But a guided meditation app’s experience is naturally spread over time. Each day’s session begins and ends with brief instruction. Instructors offer topical prompts throughout the practice. Intermittent repetition can keep old ideas active in students’ minds until they’re ready to engage. Rather than delivering a bound monograph on meditation, instructors can slowly unfurl an idea over hundreds of days. Critically, these apps are a mass medium, just as books are: lessons can be “written” once and redistributed cheaply to huge audiences. Could this approach be applied more generally?
 
-引导冥想的智能手机应用提供了一种有希望的设计方法。冥想的洞察力是缓慢展开的。通常建议有志者每天练习。经过数周和数月，他们可能开始以不同的方式体验世界。如果你还不能清楚地感知你的呼吸，冥想中的一些概念就没有意义，所以最好在以后再介绍。一本关于冥想的书并不适合这种缓慢展开的方式：其中许多内容最初可能没有意义；随着练习的进展，读者需要一次又一次地重新阅读。但是，引导冥想应用的经验自然会随着时间的推移而扩散。每一天的课程以简短的指导开始和结束。指导者在整个练习过程中提供专题提示。间歇性的重复可以使旧的想法在学生的头脑中保持活跃，直到他们准备好投入。与其提供一本装订成册的冥想专著，指导者可以在数百天内慢慢展开一个想法。重要的是，这些应用是一种大众媒介，就像书籍一样：课程可以被「写」一次，并以低廉的价格重新分配给大量的受众。这种方法可以更普遍地应用吗？
+引导冥想的APP为我们提供了一种可能性。冥想的洞察力是缓慢展开的，通常来说，经过数周和数月的每天练习，冥想者可能开始会以不同的方式体验世界。冥想中的一些概念要求冥想者清楚地感知自身的呼吸，否则就没有意义，如果你还不能做到，那我们之后会再介绍。这种缓慢展开的方式并不适合有关冥想的书籍：因为在最初的时候，其中许多内容可能是没有意义的；但随着练习的进展，读者一次又一次地重新阅读；接着随时间的推移，冥想APP的实践成效会进一步深入冥想者的内心。在每一天的课程里，APP简短地指导如何开始和何时结束。指导者在整个练习过程中提供一些提示，给予冥想者一些想法，这些提示和想法的间歇性重复可以让之前的想法在学生的头脑中保持活跃，直到他们准备就绪。与其提供一本装订成册的冥想专著，指导者可以在数百天内慢慢展开一个想法。重要的是，这些APPs是一种大众媒介，就像书籍中的思想，一次性就「编写」完成，然后廉价地重新分配给大量的受众。那么，像这样的方法可以更广泛地应用吗？
 
 ![img](https://numinous.productions/timeful/images/leftFloat3.png)
 
 To engage with a book’s ideas over time, readers must remember its details, and [that’s already a challenge](https://andymatuschak.org/books). One promising solution lies in [spaced repetition memory systems](https://augmentingcognition.com/ltm.html), which allow users to retain large quantities of knowledge reliably and efficiently. Like meditation, these systems involve a daily practice: every day, a reader maintains their memory library by reviewing a few dozen lightweight prompts. Each prompt asks a detailed question, like “What types of stimuli does George Miller’s span of absolute judgment describe?” Each day’s session is different because each prompt repeats on its own schedule. When a user remembers or forgets the answer to a prompt, the system expands or contracts that prompt’s repetition interval along an exponential curve. These expanding intervals allow readers to maintain a collection of thousands of prompts while reviewing only a few dozen each day. Practitioners generally complete their review sessions in moments which would otherwise go unused, like when waiting in line.
 
-为了长期投入一本书的思想，读者必须记住其细节，而[这已经是一个挑战](https://andymatuschak.org/books)。一个有希望的解决方案在于[间隔重复记忆系统](https://augmentingcognition.com/ltm.html)，它允许用户可靠而有效地保留大量的知识。像冥想一样，这些系统涉及到每天的练习：每天，读者通过复习几十个轻量级的提示来维护他们的记忆库。每个提示都提出了一个详细的问题，比如「 George Miller 的绝对判断跨度描述了哪些类型的刺激？」 每天的会话都是不同的，因为每个提示都会按照自己的时间表重复进行。当用户记住或忘记某个提示的答案时，系统会沿着指数曲线扩大或缩小该提示的重复间隔。这些扩大的间隔使读者能够保持数千条提示的集合，而每天只复习几十条提示。参与者一般都是在本来没用上的时间完成复习，比如排队等候时。
+为了长期领会一本书的思想，读者必须记住书里的方方面面，而[这已经是一个挑战](https://andymatuschak.org/books)。[间隔重复记忆系统](https://augmentingcognition.com/ltm.html)是一个有希望的解决方案，它能够让用户牢固而有效地记住大量的知识。像冥想一样，间隔重复记忆系统涉及到每天的练习：读者每天通过复习几十个轻量级的提示来维护他们大脑中的记忆库。每个提示都提出了一个详细的问题，比如「 George Miller 的绝对判断跨度描述了哪些类型的刺激？」 因为每个提示都会按照自己的时间表进行重复，所以用户每天经历的环节也是不同的。当用户记住或忘记某个提示的答案时，间隔重复系统会沿着记忆的指数曲线扩大或缩小该提示的重复间隔。这些扩大的间隔使读者能够保持数千条提示的集合，而每天只复习几十条的内容。参与者往往是在空闲的时间完成复习，比如排队等候时。
 
 ![This figure illustrates pages of a book being presented along a timeline of expanding intervals.](https://numinous.productions/timeful/images/timeline.png)
 
 Despite their efficacy, these systems are not yet widely adopted. One important barrier to adoption is that it’s surprisingly difficult to write good prompts. To explore one potential solution, we created an experimental quantum computing textbook, *[Quantum Country](https://quantum.country/)*. It’s written in a “[mnemonic medium](https://numinous.productions/ttft/),” interleaving expert-authored spaced repetition prompts into the reading experience. Our goal was to help readers engage with challenging technical material by supporting their memory. <img src="https://numinous.productions/timeful/images/rightFloat2.png" alt="img" style="zoom:25%;" />As we interviewed readers, though, we noticed that the regular review sessions didn’t just build detailed retention: the ongoing practice also changed readers’ relationship to the material by maintaining their contact with it over time. These people didn’t just read the book once and proceed with their lives. *Quantum Country*’s review sessions returned readers to its ideas again and again over weeks and months.
 
-尽管这些系统很有效，但还没有被广泛采用。采用的一个重要障碍是，要写出好的提示是出乎意料的困难。为了探索一个潜在的解决方案，我们创建了一本实验性的量子计算教科书，《[量子国度](https://quantum.country/)》。它是以「[记忆媒介](https://numinous.productions/ttft/)」的方式编写的，将专家撰写的间隔重复提示穿插在阅读体验中。我们的目标是通过支持读者的记忆来帮助他们参与具有挑战性的技术材料。然而，当我们采访读者时，我们注意到定期的复习会话不仅仅是建立详细的记忆：这种持续的做法也改变了读者与材料的关系，使他们长期保持与材料的联系。这些人并不只是读了一遍书就继续他们的生活了。《量子国度》的复习会话让读者在数周和数月内一次又一次地回到它的想法上。
+虽然间隔重复系统很有效，但并没有被广泛应用。如何写出好的提示内容？这是一个出乎意料的重要障碍。为了探索一个潜在的解决方案，我们编撰了一本实验性的量子计算教科书——《[量子国度](https://quantum.country/)》。该书以「[记忆媒介](https://numinous.productions/ttft/)」的方式进行编写，将专家撰写的间隔重复提示穿插在阅读体验中。我们的目标是通过增强读者的记忆，帮助他们进一步领会有着困难的技术材料。不过，我们采访读者的时候注意到定期的复习环节不仅仅是建立了详细的记忆，定期的复习也让读者与材料本身建立了长期的联系。因为这些人并不只是读了一遍书就继续他们的生活了，《量子国度》的复习让读者在数周和数月内一次又一次地回到书里的想法。
 
 *Quantum Country*’s prompts are designed to help readers remember technical material, but it may be possible to adapt similar mechanisms to support future timeful texts.
 
-《量子国度》的提示旨在帮助读者记住技术材料，但也有可能调整类似的机制来支持未来的穿越时间的文本。
+《量子国度》的提示内容旨在帮助读者记住技术材料，但这也许可以通过调整类似的机制来承载未来那些穿越时间的文本。
 
 Consider *The Elements of Style*, a classic writing primer by Strunk and White. The authors demonstrate the value of parallel construction with this example from the Bible: “Blessed are the poor in spirit: for theirs is the kingdom of heaven. Blessed are they that mourn: for they shall be comforted. Blessed are the meek: for they shall inherit the earth.” But it’s not enough to read an example. Good writers’ ears become automatically alert to these constructions. They notice opportunities to create parallelisms, and they notice dissonance when similar phrases are presented differently. It takes time to develop this awareness.
 
-考虑一下《风格要素》，这是 Strunk 和 White 的经典写作入门书。作者用《圣经》中的这个例子证明了排比结构的价值：「心灵贫穷的人有福了，因为天国是他们的。哀哭的人有福了，因为他们必得安慰。温柔的人有福了，因为他们要承受地土」。但是光是读一个例子是不够的。优秀作家的耳朵会自动对这些结构产生警惕。他们注意到创造排比的机会，当类似的短语以不同的方式呈现时，他们会注意到不和谐的现象。培养这种意识需要时间。
+《风格要素》是 Strunk 和 White 的经典写作入门书，我们可以借此来做一个参考。作者举了《圣经》中的这个例子证明了排比结构的价值：「虚心的人有福了，因为天国是他们的。哀恸的人有福了，因为他们必得安慰。温柔的人有福了，因为他们必承受地土」。但是光是读一个例子是不够的。优秀作家的耳朵会自动对这些修辞手法产生警惕。当类似的短语以不同的方式呈现时，他们注意到创造排比的机会，同时他们也会注意到不和谐的现象。这种意识需要时间来培养。
 
 What if, a week after learning about parallel construction, a reader’s review session included this prompt?
 
@@ -64,35 +64,35 @@ What if, a week after learning about parallel construction, a reader’s review 
 >
 > “My fellow Americans, ask not what your country can do for you. Instead, reflect on what you can contribute to these United States.” (modified from a quote by John F. Kennedy, which would be revealed in its original form once the reader had finished with the prompt)
 
-如果在学习排比结构一周后，读者的复习会话上有这样的提示呢？
+如果在学习排比结构一周后，读者的复习环节时有这样的提示呢？
 
 > 下面这段话被修改为删除了一个排比结构。你可以怎样改写以增加排比结构？两者在效果上有什么不同？
 >
-> 「我的美国同胞，不要问你的国家能为你做什么。相反，要思考你能为这些美国贡献什么。」（根据约翰-F-肯尼迪的一句话修改，一旦读者完成了提示，这句话的原貌就会显现出来）
+> 「美国同胞们，不要问国家能为你们做些什么，而要问你们能为国家做些什么。」（改编自约翰-F-肯尼迪的一句话，一旦读者完成了提示，这句话的原貌就会显现出来）
 
 A week or two later, a similar prompt might appear with a different distorted quote. For example: “You can fool all the people some of the time, and you can mislead many listeners consistently. But you won’t be able to fool everyone reliably.” (adapted from Abraham Lincoln)
 
-一两个星期后，类似的提示可能会出现，但引用的内容会有所不同。比如说：「你可以在某些时候欺骗所有的人，你也可以持续地误导许多听众。但你不可能可靠地愚弄所有人」。（改编自亚伯拉罕-林肯）
+一两个星期后，类似的提示可能会出现，但引用的内容会有所不同。比如说：「你可以一直愚弄一些人，甚至可以在某个时期愚弄所有的人；但不能一直愚弄所有的人」。（改编自亚伯拉罕-林肯）
 
 Such prompts might seem onerous or strange on their own, but what if most educated people maintained a regular review practice of the kind we’ve described? The example reflection prompt would sit between others on physics, poetry, and whatever else you’d been thinking about. If you found the prompt useful, it would recur in another week; if not, perhaps it would reappear in a few months. A book like *The Elements of Style* might include dozens or hundreds of prompts like these on various topics, so that you’d see one or two each day over weeks and months as you integrate its ideas into the way you view and practice writing.
 
-这样的提示本身可能看起来很繁琐或奇怪，但如果大多数受过教育的人都保持着我们所描述的那种定期复习的做法呢？这个例子中的反思提示将位于物理学、诗歌和其他你正在思考的问题之间。如果你觉得这个提示有用，它将在下周再次出现；如果没有，也许它将在几个月后再次出现。一本像《风格要素》这样的书可能包括几十个或几百个关于各种主题的提示，这样，在几周或几个月内，你每天都会看到一两个提示，因为你会把它的想法融入你看待和练习写作的方式。
+这样的提示可能看起来很繁琐或奇怪，但如果大多数受过教育的人都保持着这样的间隔重复呢？这个反思提示的例子可以在物理、诗歌和任意你能想到的东西间适用。如果你觉得这个提示内容有用，它将在下周再次出现；如果没有，也许它将在几个月后再次出现。一本像《风格要素》这样的书可能包括几十个或几百个关于各种主题的提示，这样，在几周或几个月内，你每天都会看到一两个提示，你会逐渐把它的想法融入你看待和练习写作的方式。
 
 In early chapters of *Quantum Country*, readers see every prompt as they read the text, and the prompts remain the same in the ensuing review sessions. But in the final chapter, we added a new kind of prompt which changes over time in a programmed sequence. Perhaps future timeful texts could unfurl their contents over the course of many sessions, much as we observed that digital meditation lessons do.
 
-在《量子国度》的早期章节中，读者在阅读文本时看到了每一个提示，而且在随后的复习会话上，这些提示也保持不变。但在最后一章中，我们增加了一种新的提示，它以程序化的顺序随时间变化。也许未来的穿越时间的文本可以在许多环节中展开它们的内容，就像我们观察到的数字冥想课那样。
+在《量子国度》的早期章节中，读者在阅读文本时看到了每一个提示，而且在随后的复习环节里，这些提示也都是相同的。但在最后一章中，我们增加了一种新的提示，它以程序化的顺序随时间进行变化。也许未来穿越时间的文本可以在许多环节中展开它们的内容，就像我们观察的线上冥想课那样。
 
 Of course, spaced repetition is just one approach for writing timeful texts. What other powerful tools might it be possible to create, making future books into artifacts that transcend their pages, as they slowly help readers shape their lives?
 
-当然，间隔重复只是写穿越时间的文本的一种方法。还有什么强大的工具可以创造，使未来的书成为超越书页的艺术品，因为它们慢慢地帮助读者塑造他们的生活？
+当然，间隔重复只是穿越时间的文本的一种写法。还有什么强大的工具可能被创造出来，使未来的书成为超越书籍本身的艺术品，逐渐去帮助读者塑造他们的生活呢？
 
 Hi there—Andy here! A parting note:
 
-嗨，我是 Andy。临别之际，我想说的是：
+嗨，我是 Andy。临别之际，我想说：
 
 I’m working to make these concepts into reality. If you’re an author interested in bringing these ideas to an existing or forthcoming text, please [get in touch](mailto:andy@andymatuschak.org).
 
-我正在努力将这些概念变成现实。如果你是一个有兴趣将这些想法带入现有或即将出版的文本的作者，请[保持联系](mailto:andy@andymatuschak.org)。
+我正在努力将这些概念变成现实。如果你是一个有兴趣将这些想法带入现有或即将出版的文本的作者，请与我[保持联系](mailto:andy@andymatuschak.org)。
 
 This work is crowdfunded by my [Patreons](https://www.patreon.com/quantumcountry); if you’d like to see more in this space, consider [supporting my research there](https://www.patreon.com/quantumcountry).
 
@@ -100,12 +100,13 @@ This work is crowdfunded by my [Patreons](https://www.patreon.com/quantumcountry
 
 Special thanks to my sponsor-level patrons: [Adam Wiggins](https://twitter.com/hirodusk), [Andrew Sutherland](https://asuth.com/), [Bert Muthalaly](http://somethingdoneright.net/), [Calvin French-Owen](http://calv.info/),[Dwight Crow](https://www.linkedin.com/in/dwight-crow-73122621), [fnnch](https://fnnch.com/), [Gabriel Herrero-Beaumont ](https://twitter.com/GaboHBeaumont), [James Hill-Khurana](https://jameshk.com/), [Kevin Lacker](https://twitter.com/lacker), [Lambda AI Hardware](https://lambdalabs.com/), [Ludwig Petersson](https://twitter.com/ludwig), [Mickey McManus](http://www.t-1ventures.com/), [Patrick Collison](https://patrickcollison.com/), Paul Sutter, [Peter Hartree](https://peterhartree.co.uk/), [Sana Labs](https://www.sanalabs.com/), [Shripriya Mahesh](https://shripriya.com/), [Tim O'Reilly](https://www.oreilly.com/tim/). My thanks also to [Emergent Ventures](https://www.mercatus.org/emergent-ventures) for a 2019 grant supporting my work in this space.
 
-特别感谢我的赞助人级别的赞助人。[Adam Wiggins](https://twitter.com/hirodusk), [Andrew Sutherland](https://asuth.com/), [Bert Muthalaly](http://somethingdoneright.net/), [Calvin French-Owen](http://calv.info/), [Dwight Crow](https://www.linkedin.com/in/dwight-crow-73122621), [fnnch](https://fnnch.com/), [Gabriel Herrero-Beaumont ](https://twitter.com/GaboHBeaumont), [James Hill-Khurana](https://jameshk.com/) , [Kevin Lacker](https://twitter。 com/lacker), [Lambda AI Hardware](https://lambdalabs.com/), [Ludwig Petersson](https://twitter.com/ludwig), [Mickey McManus](http://www.t-1ventures.com/), [Patrick Collison](https://patrickcollison.com/), Paul Sutter, [Peter Hartree](https://peterhartree.co.uk/), [Sana Labs](https://www.sanalabs.com/), [Shripriya Mahesh](https://shripriya.com/), [Tim O'Reilly](https://www.oreilly.com/tim/)。我还要感谢 [Emergent Ventures](https://www.mercatus.org/emergent-ventures) 提供的 2019 年资助，支持我在这个领域的工作。
+特别鸣谢我的赞助人。[Adam Wiggins](https://twitter.com/hirodusk), [Andrew Sutherland](https://asuth.com/), [Bert Muthalaly](http://somethingdoneright.net/), [Calvin French-Owen](http://calv.info/), [Dwight Crow](https://www.linkedin.com/in/dwight-crow-73122621), [fnnch](https://fnnch.com/), [Gabriel Herrero-Beaumont ](https://twitter.com/GaboHBeaumont), [James Hill-Khurana](https://jameshk.com/) , [Kevin Lacker](https://twitter。 com/lacker), [Lambda AI Hardware](https://lambdalabs.com/), [Ludwig Petersson](https://twitter.com/ludwig), [Mickey McManus](http://www.t-1ventures.com/), [Patrick Collison](https://patrickcollison.com/), Paul Sutter, [Peter Hartree](https://peterhartree.co.uk/), [Sana Labs](https://www.sanalabs.com/), [Shripriya Mahesh](https://shripriya.com/), [Tim O'Reilly](https://www.oreilly.com/tim/)。我还要感谢 [Emergent Ventures](https://www.mercatus.org/emergent-ventures) 提供的 2019 年资助，支持我在这个领域的工作。
 
 This work is licensed under [CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/), which means that you can copy, share, and build on this essay (with attribution), but not sell it. If your derivative work also includes the illustrations, please make sure to attribute them to Maggie Appleton.
 
-本作品以 [CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/) 授权，这意味着你可以复制、分享和建立在这篇文章上（注明出处），但不能出售。如果你的衍生作品也包括插图，请确保将它们归于 Maggie Appleton。
+本作品以 [CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/) 授权，这意味着你可以复制、分享和在这篇文章的基础上注明出处，但请勿出售本文章。如果你的衍生作品也包括插图，请确保将它们归于 Maggie Appleton。
 
 This page is set in Reforma, created by PampaType for Universidad Nacional de Córdoba and licensed under [CC BY-ND 4.0.](https://creativecommons.org/licenses/by-nd/4.0/)
 
-本页以 Reforma 为背景，由 PampaType 为科尔多瓦国立大学创建，在 [CC BY-ND 4.0](https://creativecommons.org/licenses/by-nd/4.0/) 下授权。
+本页以 Reforma 为背景，由 PampaType 为科尔多瓦国立大学创建，以 [CC BY-ND 4.0](https://creativecommons.org/licenses/by-nd/4.0/) 授权。
+
