统一术语与格式

--- a/Essays/穿越时间的文本.md
+++ b/Essays/穿越时间的文本.md
@@ -36,23 +36,23 @@ As we consider alternative approaches, we can find inspiration in the world’s 
 
 Guided meditation smartphone apps offer a promising design approach. Meditation’s insights unfold slowly. Aspirants are typically advised to practice daily. Over weeks and months, they may begin to experience the world differently. Some concepts in meditation make no sense if you still can’t perceive your breath clearly, so they’re best introduced later. A book on meditation isn’t well-suited to this kind of slow unfurling: much of it may not make sense initially; readers will need to re-read it again and again as their practice progresses. But a guided meditation app’s experience is naturally spread over time. Each day’s session begins and ends with brief instruction. Instructors offer topical prompts throughout the practice. Intermittent repetition can keep old ideas active in students’ minds until they’re ready to engage. Rather than delivering a bound monograph on meditation, instructors can slowly unfurl an idea over hundreds of days. Critically, these apps are a mass medium, just as books are: lessons can be “written” once and redistributed cheaply to huge audiences. Could this approach be applied more generally?
 
-引导冥想的APP为我们提供了一种可能性。冥想的洞察力是缓慢展开的，通常来说，经过数周和数月的每天练习，冥想者可能开始会以不同的方式体验世界。冥想中的一些概念要求冥想者清楚地感知自身的呼吸，否则就没有意义，如果你还不能做到，那我们之后会再介绍。这种缓慢展开的方式并不适合有关冥想的书籍：因为在最初的时候，其中许多内容可能是没有意义的；但随着练习的进展，读者一次又一次地重新阅读；接着随时间的推移，冥想APP的实践成效会进一步深入冥想者的内心。在每一天的课程里，APP简短地指导如何开始和何时结束。指导者在整个练习过程中提供一些提示，给予冥想者一些想法，这些提示和想法的间歇性重复可以让之前的想法在学生的头脑中保持活跃，直到他们准备就绪。与其提供一本装订成册的冥想专著，指导者可以在数百天内慢慢展开一个想法。重要的是，这些APPs是一种大众媒介，就像书籍中的思想，一次性就「编写」完成，然后廉价地重新分配给大量的受众。那么，像这样的方法可以更广泛地应用吗？
+引导冥想的 APP 为我们提供了一种可能性。冥想的洞察力是缓慢展开的，通常来说，经过数周和数月的每天练习，冥想者可能开始会以不同的方式体验世界。冥想中的一些概念要求冥想者清楚地感知自身的呼吸，否则就没有意义，如果你还不能做到，那我们之后会再介绍。这种缓慢展开的方式并不适合有关冥想的书籍：因为在最初的时候，其中许多内容可能是没有意义的；但随着练习的进展，读者一次又一次地重新阅读；接着随时间的推移，冥想 APP 的实践成效会进一步深入冥想者的内心。在每一天的课程里，APP 简短地指导如何开始和何时结束。指导者在整个练习过程中提供一些卡片，给予冥想者一些想法，这些卡片和想法的间歇性重复可以让之前的想法在学生的头脑中保持活跃，直到他们准备就绪。与其提供一本装订成册的冥想专著，指导者可以在数百天内慢慢展开一个想法。重要的是，这些 APP 是一种大众媒介，就像书籍中的思想，一次性就「编写」完成，然后廉价地重新分配给大量的受众。那么，像这样的方法可以更广泛地应用吗？
 
 ![img](https://numinous.productions/timeful/images/leftFloat3.png)
 
 To engage with a book’s ideas over time, readers must remember its details, and [that’s already a challenge](https://andymatuschak.org/books). One promising solution lies in [spaced repetition memory systems](https://augmentingcognition.com/ltm.html), which allow users to retain large quantities of knowledge reliably and efficiently. Like meditation, these systems involve a daily practice: every day, a reader maintains their memory library by reviewing a few dozen lightweight prompts. Each prompt asks a detailed question, like “What types of stimuli does George Miller’s span of absolute judgment describe?” Each day’s session is different because each prompt repeats on its own schedule. When a user remembers or forgets the answer to a prompt, the system expands or contracts that prompt’s repetition interval along an exponential curve. These expanding intervals allow readers to maintain a collection of thousands of prompts while reviewing only a few dozen each day. Practitioners generally complete their review sessions in moments which would otherwise go unused, like when waiting in line.
 
-为了长期领会一本书的思想，读者必须记住书里的方方面面，而[这已经是一个挑战](https://andymatuschak.org/books)。[间隔重复记忆系统](https://augmentingcognition.com/ltm.html)是一个有希望的解决方案，它能够让用户牢固而有效地记住大量的知识。像冥想一样，间隔重复记忆系统涉及到每天的练习：读者每天通过复习几十个轻量级的提示来维护他们大脑中的记忆库。每个提示都提出了一个详细的问题，比如「 George Miller 的绝对判断跨度描述了哪些类型的刺激？」 因为每个提示都会按照自己的时间表进行重复，所以用户每天经历的环节也是不同的。当用户记住或忘记某个提示的答案时，间隔重复系统会沿着记忆的指数曲线扩大或缩小该提示的重复间隔。这些扩大的间隔使读者能够保持数千条提示的集合，而每天只复习几十条的内容。参与者往往是在空闲的时间完成复习，比如排队等候时。
+为了长期领会一本书的思想，读者必须记住书里的方方面面，而[这已经是一个挑战](https://andymatuschak.org/books)。[间隔重复记忆系统](https://augmentingcognition.com/ltm.html)是一个有希望的解决方案，它能够让用户牢固而有效地记住大量的知识。像冥想一样，间隔重复记忆系统涉及到每天的练习：读者每天通过复习几十个轻量级的卡片来维护他们大脑中的记忆库。每个卡片都提出了一个详细的问题，比如「 George Miller 的绝对判断跨度描述了哪些类型的刺激？」 因为每个卡片都会按照自己的时间表进行重复，所以用户每天经历的环节也是不同的。当用户记住或忘记某个卡片的答案时，间隔重复系统会沿着记忆的指数曲线扩大或缩小该卡片的重复间隔。这些扩大的间隔使读者能够保持数千张卡片的集合，而每天只复习几十张卡片。参与者往往是在空闲的时间完成复习，比如排队等候时。
 
 ![This figure illustrates pages of a book being presented along a timeline of expanding intervals.](https://numinous.productions/timeful/images/timeline.png)
 
 Despite their efficacy, these systems are not yet widely adopted. One important barrier to adoption is that it’s surprisingly difficult to write good prompts. To explore one potential solution, we created an experimental quantum computing textbook, *[Quantum Country](https://quantum.country/)*. It’s written in a “[mnemonic medium](https://numinous.productions/ttft/),” interleaving expert-authored spaced repetition prompts into the reading experience. Our goal was to help readers engage with challenging technical material by supporting their memory. <img src="https://numinous.productions/timeful/images/rightFloat2.png" alt="img" style="zoom:25%;" />As we interviewed readers, though, we noticed that the regular review sessions didn’t just build detailed retention: the ongoing practice also changed readers’ relationship to the material by maintaining their contact with it over time. These people didn’t just read the book once and proceed with their lives. *Quantum Country*’s review sessions returned readers to its ideas again and again over weeks and months.
 
-虽然间隔重复系统很有效，但并没有被广泛应用。如何写出好的提示内容？这是一个出乎意料的重要障碍。为了探索一个潜在的解决方案，我们编撰了一本实验性的量子计算教科书——《[量子国度](https://quantum.country/)》。该书以「[记忆媒介](https://numinous.productions/ttft/)」的方式进行编写，将专家撰写的间隔重复提示穿插在阅读体验中。我们的目标是通过增强读者的记忆，帮助他们进一步领会有着困难的技术材料。不过，我们采访读者的时候注意到定期的复习环节不仅仅是建立了详细的记忆，定期的复习也让读者与材料本身建立了长期的联系。因为这些人并不只是读了一遍书就继续他们的生活了，《量子国度》的复习让读者在数周和数月内一次又一次地回到书里的想法。
+虽然间隔重复系统很有效，但并没有被广泛应用。如何写出好卡片？这是一个出乎意料的重要障碍。为了探索一个潜在的解决方案，我们编撰了一本实验性的量子计算教科书——《[量子国度](https://quantum.country/)》。该书以「[助记媒介](https://numinous.productions/ttft/)」的方式进行编写，将专家撰写的间隔重复卡片穿插在阅读体验中。我们的目标是通过增强读者的记忆，帮助他们进一步领会有着困难的技术材料。不过，我们采访读者的时候注意到定期的复习环节不仅仅是建立了详细的记忆，定期的复习也让读者与材料本身建立了长期的联系。因为这些人并不只是读了一遍书就继续他们的生活了，《量子国度》的复习让读者在数周和数月内一次又一次地回到书里的想法。
 
 *Quantum Country*’s prompts are designed to help readers remember technical material, but it may be possible to adapt similar mechanisms to support future timeful texts.
 
-《量子国度》的提示内容旨在帮助读者记住技术材料，但这也许可以通过调整类似的机制来承载未来那些穿越时间的文本。
+《量子国度》的卡片旨在帮助读者记住技术材料，但这也许可以通过调整类似的机制来承载未来那些穿越时间的文本。
 
 Consider *The Elements of Style*, a classic writing primer by Strunk and White. The authors demonstrate the value of parallel construction with this example from the Bible: “Blessed are the poor in spirit: for theirs is the kingdom of heaven. Blessed are they that mourn: for they shall be comforted. Blessed are the meek: for they shall inherit the earth.” But it’s not enough to read an example. Good writers’ ears become automatically alert to these constructions. They notice opportunities to create parallelisms, and they notice dissonance when similar phrases are presented differently. It takes time to develop this awareness.
 
@@ -64,23 +64,23 @@ What if, a week after learning about parallel construction, a reader’s review 
 >
 > “My fellow Americans, ask not what your country can do for you. Instead, reflect on what you can contribute to these United States.” (modified from a quote by John F. Kennedy, which would be revealed in its original form once the reader had finished with the prompt)
 
-如果在学习排比结构一周后，读者的复习环节时有这样的提示呢？
+如果在学习排比结构一周后，读者的复习环节时有这样的卡片呢？
 
 > 下面这段话被修改为删除了一个排比结构。你可以怎样改写以增加排比结构？两者在效果上有什么不同？
 >
-> 「美国同胞们，不要问国家能为你们做些什么，而要问你们能为国家做些什么。」（改编自约翰-F-肯尼迪的一句话，一旦读者完成了提示，这句话的原貌就会显现出来）
+> 「美国同胞们，不要问国家能为你们做些什么，而要问你们能为国家做些什么。」（改编自约翰-F-肯尼迪的一句话，一旦读者完成了卡片，这句话的原貌就会显现出来）
 
 A week or two later, a similar prompt might appear with a different distorted quote. For example: “You can fool all the people some of the time, and you can mislead many listeners consistently. But you won’t be able to fool everyone reliably.” (adapted from Abraham Lincoln)
 
-一两个星期后，类似的提示可能会出现，但引用的内容会有所不同。比如说：「你可以一直愚弄一些人，甚至可以在某个时期愚弄所有的人；但不能一直愚弄所有的人」。（改编自亚伯拉罕-林肯）
+一两个星期后，类似的卡片可能会出现，但引用的内容会有所不同。比如说：「你可以一直愚弄一些人，甚至可以在某个时期愚弄所有的人；但不能一直愚弄所有的人」。（改编自亚伯拉罕-林肯）
 
 Such prompts might seem onerous or strange on their own, but what if most educated people maintained a regular review practice of the kind we’ve described? The example reflection prompt would sit between others on physics, poetry, and whatever else you’d been thinking about. If you found the prompt useful, it would recur in another week; if not, perhaps it would reappear in a few months. A book like *The Elements of Style* might include dozens or hundreds of prompts like these on various topics, so that you’d see one or two each day over weeks and months as you integrate its ideas into the way you view and practice writing.
 
-这样的提示可能看起来很繁琐或奇怪，但如果大多数受过教育的人都保持着这样的间隔重复呢？这个反思提示的例子可以在物理、诗歌和任意你能想到的东西间适用。如果你觉得这个提示内容有用，它将在下周再次出现；如果没有，也许它将在几个月后再次出现。一本像《风格要素》这样的书可能包括几十个或几百个关于各种主题的提示，这样，在几周或几个月内，你每天都会看到一两个提示，你会逐渐把它的想法融入你看待和练习写作的方式。
+这样的卡片可能看起来很繁琐或奇怪，但如果大多数受过教育的人都保持着这样的间隔重复呢？这个反思卡片的例子可以在物理、诗歌和任意你能想到的东西间适用。如果你觉得这个卡片有用，它将在下周再次出现；如果没有，也许它将在几个月后再次出现。一本像《风格要素》这样的书可能包括几十个或几百个关于各种主题的卡片，这样，在几周或几个月内，你每天都会看到一两个卡片，你会逐渐把它的想法融入你看待和练习写作的方式。
 
 In early chapters of *Quantum Country*, readers see every prompt as they read the text, and the prompts remain the same in the ensuing review sessions. But in the final chapter, we added a new kind of prompt which changes over time in a programmed sequence. Perhaps future timeful texts could unfurl their contents over the course of many sessions, much as we observed that digital meditation lessons do.
 
-在《量子国度》的早期章节中，读者在阅读文本时看到了每一个提示，而且在随后的复习环节里，这些提示也都是相同的。但在最后一章中，我们增加了一种新的提示，它以程序化的顺序随时间进行变化。也许未来穿越时间的文本可以在许多环节中展开它们的内容，就像我们观察的线上冥想课那样。
+在《量子国度》的早期章节中，读者在阅读文本时看到了每一个卡片，而且在随后的复习环节里，这些卡片也都是相同的。但在最后一章中，我们增加了一种新的卡片，它以程序化的顺序随时间进行变化。也许未来穿越时间的文本可以在许多环节中展开它们的内容，就像我们观察的线上冥想课那样。
 
 Of course, spaced repetition is just one approach for writing timeful texts. What other powerful tools might it be possible to create, making future books into artifacts that transcend their pages, as they slowly help readers shape their lives?
 
